[package]
name = "ommx"

# Inherit from workspace setting
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

# crate-specific settings for publishing
description = "Open Mathematical prograMming eXchange (OMMX)"
documentation = "https://docs.rs/ommx/"
repository = "https://github.com/Jij-Inc/ommx"
keywords = ["optimization", "ommx"]
categories = ["data-structures", "mathematics", "science"]

[lints]
workspace = true

[features]
default = ["remote-artifact"]
remote-artifact = [
    "ocipkg/remote",
    "dep:docker_credential",
    "dep:http",
    "dep:oci-client",
    "dep:tokio",
    "built",
]
built = ["dep:built"]
cli = ["dep:tracing-subscriber"]

[dependencies]
anyhow.workspace = true
approx.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
csv.workspace = true
derive_more.workspace = true
directories.workspace = true
docker_credential = { workspace = true, optional = true }
flate2.workspace = true
fnv.workspace = true
getset.workspace = true
http = { workspace = true, optional = true }
indexmap.workspace = true
itertools.workspace = true
katexit.workspace = true
maplit.workspace = true
num.workspace = true
oci-client = { workspace = true, optional = true }
oci-spec.workspace = true
ocipkg = { workspace = true }
ommx-derive = { path = "../ommx-derive", version = "=3.0.0-alpha.2" }
ordered-float.workspace = true
petgraph.workspace = true
proptest.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
sha2.workspace = true
similar.workspace = true
smallvec.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
url.workspace = true
uuid.workspace = true

[dev-dependencies]
colored.workspace = true
criterion.workspace = true
indoc.workspace = true
insta.workspace = true

[build-dependencies]
built = { workspace = true, optional = true }

[[bin]]
name = "ommx"
path = "src/bin/ommx.rs"
required-features = ["remote-artifact", "built", "cli"]

[[example]]
name = "create_artifact"
required-features = ["remote-artifact", "built", "cli"]

[[example]]
name = "pull_artifact"
required-features = ["remote-artifact", "cli"]

[[bench]]
name = "evaluate"
harness = false

[[bench]]
name = "partial_evaluate"
harness = false

[[bench]]
name = "sum"
harness = false

[[bench]]
name = "mul"
harness = false
