[package]
name = "protogen"

version.workspace = true
edition.workspace = true
license.workspace = true

# This crate is only for developing in this repository
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
colored.workspace = true
glob.workspace = true
prost-build.workspace = true
