[package]
name = "ommx-pyo3-bridge-pyo3-029-compat"
version = "0.0.0"
edition = "2021"
publish = false

# Keep this consumer outside the repository workspace so its exact PyO3
# version cannot be unified with the Python SDK's workspace dependency.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
ommx = { path = "../../rust/ommx", default-features = false }
ommx-pyo3-bridge = { path = "../../rust/ommx-pyo3-bridge" }
pyo3 = { version = "=0.29.0", features = ["extension-module"] }
pyo3-stub-gen = "=0.23.0"
